correction regression alignement icones reseaux sociaux

--- a/skin/frontend/default/imperiale/css/responsive.css
+++ b/skin/frontend/default/imperiale/css/responsive.css
@@ -1509,6 +1509,17 @@ and (-webkit-min-device-pixel-ratio: 2) {
     .logotop {
         display: block;
     }
+    .soc li {
+        display: inline-block;
+        zoom: 1;
+        margin-right: 0.5em;
+    }
+    .follow .soc li a {
+          width: 49px;
+          height: 49px;
+          font-style: normal;
+          font-size: 0.7em;
+    }
 }
 @media only screen and (max-width : 1280px){
     .subscribe-nwl-form {
